--- a/app/src/main/res/layout/activity_web_wait.xml
+++ b/app/src/main/res/layout/activity_web_wait.xml
@@ -4,17 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bowool.xuanxue.WebWait">
-    <android.support.v7.widget.Toolbar
-        android:id= "@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-    </android.support.v7.widget.Toolbar>
+    tools:context=".WebWait">
 
-    <include android:layout_width="368dp"
-        android:layout_height="495dp"
-        layout="@layout/content_web_wait"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_web_wait" />
+
+
 
 </android.support.constraint.ConstraintLayout>
